buildscript {
    repositories {
        maven { url 'https://plugins.gradle.org/m2/' }
    }

    dependencies {
        classpath 'io.freefair.gradle:lombok-plugin:8.4'
    }
}

wrapper {
    gradleVersion = "8.5"
}

subprojects {
    apply plugin: 'java-library'
    apply plugin: 'io.freefair.lombok'

    group = 'framework.templates.springbootwebflux'
    version = '0.0.1-SNAPSHOT'
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

ext {
    versions = [
            springBoot: "2.7.18",
            resilience4jVersion: "2.1.0"
    ]
}
